--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,52 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+</head>
+<body>
+    <p><h1>Contact</h1></p>
+<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+<div class="supercontainer m-auto mt-3 mb-5 bg-secondary-light py-4" style="width: 40rem;">
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <p><strong>Your E-mail</strong></p>
+            </div>
+            <div class="col-9">
+                <input type="text" class="form-control" placeholder="Your email" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <p><strong>Your message</strong></p>
+            </div>
+            <div class="col-9">
+                <input type="text" class="form-control" placeholder="Please enter your message here..." aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-10">
+        
+            </div>
+            <div class="col-2">
+                <input class="btn btn-primary" type="submit" value="Submit">
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+</html>
+
+
+
+
+
+
