--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,58 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    </head>
+    <body>
+        
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>Portfolio</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida tortor nec urna lacinia auctor. Aliquam eu quam id augue eleifend malesuada.
+                        In egestas nulla eu orci accumsan accumsan. Mauris venenatis volutpat lorem a sodales. Cras vitae elit in nisl imperdiet tristique et eget diam. 
+                        Aenean aliquam viverra turpis. Aenean vitae laoreet tellus. Duis hendrerit fermentum neque et euismod. Nulla ultrices libero velit, eget tempus 
+                        mauris condimentum vel. 
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img class="lazy-loaded" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
+                        <div class="card-body">
+                          <h5 class="card-title">Project Name</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida tortor nec urna lacinia auctor. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img class="lazy-loaded" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
+                        <div class="card-body">
+                          <h5 class="card-title">Project Name</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida tortor nec urna lacinia auctor. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <img class="lazy-loaded" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
+                        <div class="card-body">
+                          <h5 class="card-title">Project Name</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida tortor nec urna lacinia auctor. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </body>
+    
+</html>
