--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,3 +1,47 @@
 body{
     background: #BDBDBD;
 }
+
+img{
+    height: 500px;
+    width: 100%;
+}
+
+.contenedor{
+    width: 100%;
+    height: 200px;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+}
+.primer-texto{
+    background-color: white;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
+
+.segundo-texto{
+    background-color: white;
+    width: 100%;
+    text-align: center;
+}
+
+.centrado{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.servicios{
+    display: flex;
+}
+
+.imgCirculo{
+    width: 100%;
+    height: 100%;
+}
