--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,10 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+
+    <img src="assets/img/bg.jpg" alt="">
+    <div class="display-6 fw-normal primer-texto">One Page Wonder</div>
+  <div class="display-6 fw-normal centrado segundo-texto">Will Knock Your Socks Off</div>
+</div>
+
+
+
