Cambios en Contact

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -5,43 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Contact</title>
 </head>
 <body>
-    <p><h1>Contact</h1></p>
-<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-<div class="supercontainer m-auto mt-3 mb-5 bg-secondary-light py-4" style="width: 40rem;">
-    <div class="container">
-        <div class="row">
-            <div class="col-3">
-                <p><strong>Your E-mail</strong></p>
+    <hr class="my-4">
+    <div class="megacontainer justify-content-center px-3">
+            <p><h1>Contact</h1></p>
+        <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <div class="jumbotron m-auto mt-3 mb-5 pb-4 pt-2 pr-1 mr-0" style="width: 40rem;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <p><strong>Your E-mail</strong></p>
+                    </div>
+                    <div class="col-9">
+                        <input type="text" class="form-control" placeholder="Your email" aria-label="Username" aria-describedby="basic-addon1">
+                    </div>
+                </div>
             </div>
-            <div class="col-9">
-                <input type="text" class="form-control" placeholder="Your email" aria-label="Username" aria-describedby="basic-addon1">
+            <div class="container pt-2">
+                <div class="row">
+                    <div class="col-3">
+                        <p><strong>Your message</strong></p>
+                    </div>
+                    <div class="col-9">
+                        <div class="form-group">
+                            <textarea class="form-control" placeholder="Please enter your message here..." id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-9">
+            
+                    </div>
+                    <div class="col-3 pl-5">
+                        <input class="btn btn-primary" type="submit" value="Submit">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-3">
-                <p><strong>Your message</strong></p>
-            </div>
-            <div class="col-9">
-                <input type="text" class="form-control" placeholder="Please enter your message here..." aria-label="Username" aria-describedby="basic-addon1">
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-10">
-        
-            </div>
-            <div class="col-2">
-                <input class="btn btn-primary" type="submit" value="Submit">
-            </div>
-        </div>
-    </div>
-</div>
 </body>
 </html>
 
