--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -7,6 +7,7 @@
     <body>
         
         <div class="container">
+            <hr/>
             <div class="row">
                 <div class="col">
                     <h1>Portfolio</h1>
@@ -24,7 +25,7 @@
             </div>
             <div class="row">
                 <div class="col-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img class="lazy-loaded" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
                         <div class="card-body">
                           <h5 class="card-title">Project Name</h5>
@@ -33,7 +34,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img class="lazy-loaded" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
                         <div class="card-body">
                           <h5 class="card-title">Project Name</h5>
@@ -42,7 +43,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img class="lazy-loaded" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
                         <div class="card-body">
                           <h5 class="card-title">Project Name</h5>
