Reduce size of images in portfolio

--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -25,8 +25,8 @@
             </div>
             <div class="row">
                 <div class="col-4">
-                    <div class="card">
-                        <img class="lazy-loaded" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
+                    <div class="card" >
+                        <img class="lazy-loaded" style="height: 18rem;" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
                         <div class="card-body">
                           <h5 class="card-title">Project Name</h5>
                           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida tortor nec urna lacinia auctor. </p>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img class="lazy-loaded" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
+                        <img class="lazy-loaded" style="height: 18rem;" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
                         <div class="card-body">
                           <h5 class="card-title">Project Name</h5>
                           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida tortor nec urna lacinia auctor. </p>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img class="lazy-loaded" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
+                        <img class="lazy-loaded" style="height: 18rem;" src="//via.placeholder.com/700x400" data-lazy-type="image" data-src="//via.placeholder.com/700x400">
                         <div class="card-body">
                           <h5 class="card-title">Project Name</h5>
                           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida tortor nec urna lacinia auctor. </p>
