Correcciones services tagline

--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,14 +1,19 @@
 <!-- your html code here -->
+<div class="container">
 <div class="container servicios">
     <div class="row">
-    <div class="col-4">
-        <img src="assets/img/2.jpg" class="rounded-circle imgCirculo" alt="...">
+        <div class="col-3">
+            <img src="assets/img/2.jpg" class="rounded-circle imgCirculo" alt="...">
+        </div>
+        <div class="col-8">
+            <h3> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </h3> Eum quidem blanditiis repellendus,
+            sequi laborum accusantium fuga quas. Neque pariatur, voluptate saepe doloremque distinctio blanditiis esse
+            voluptates impedit itaque consequuntur amet provident iste perspiciatis maxime cumque, natus voluptas. Ab
+            doloribus reprehenderit molestias repellendus veritatis alias, sed quae, natus itaque aliquam hic?
+        </div>
     </div>
-   <div class="col-8">
-    <strong> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </strong> Eum quidem blanditiis repellendus, sequi laborum accusantium fuga quas. Neque pariatur, voluptate saepe doloremque distinctio blanditiis esse voluptates impedit itaque consequuntur amet provident iste perspiciatis maxime cumque, natus voluptas. Ab doloribus reprehenderit molestias repellendus veritatis alias, sed quae, natus itaque aliquam hic?
-   </div>
-</div>
 </div>
 
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<hr class="my-5">
+
+</div>
