--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -2,9 +2,10 @@
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
 
     <img src="assets/img/bg.jpg" alt="">
-    <div class="display-6 fw-normal primer-texto">One Page Wonder</div>
+    <div class="display-6 fw-normal primer-texto"><strong>One Page Wonder</strong> </div>
   <div class="display-6 fw-normal centrado segundo-texto">Will Knock Your Socks Off</div>
 </div>
 
+<hr class="my-5">
 
 
