--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -17,11 +17,13 @@ img{
 .primer-texto{
     background-color: white;
     width: 100%;
+    height: auto;
     text-align: center;
     position: absolute;
-    top: 20%;
+    top: 8%;
     left: 50%;
     transform: translate(-50%, 50%);
+    font-size: calc(3.625rem + 1.5vw) !important;
 }
 
 .segundo-texto{
@@ -32,7 +34,7 @@ img{
 
 .centrado{
     position: absolute;
-    top: 40%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -44,4 +46,9 @@ img{
 .imgCirculo{
     width: 100%;
     height: 100%;
+}
+
+.display-6 {
+   
+    line-height: 1.8 !important;
 }
