Add first heading

--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,18 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<div class="row">
+    <div class="col-8">
+        <div class="row justify-content-d-start">
+            <div class="col-3">
+                <h2>This First Heading</h2> 
+            </div>
+            <div class="col-3"><h2 class="text-secondary">Will Catch Your Eye</h2>     </div>
+        </div>
+        <h3> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </h3> Eum quidem blanditiis repellendus,
+        sequi laborum accusantium fuga quas. Neque pariatur, voluptate saepe doloremque distinctio blanditiis esse
+        voluptates impedit itaque consequuntur amet provident iste perspiciatis maxime cumque, natus voluptas. Ab
+        doloribus reprehenderit molestias repellendus veritatis alias, sed quae, natus itaque aliquam hic?
+    </div>
+    <div class="col-3">
+        <img src="assets/img/1.jpg" class="rounded-circle imgCirculo" alt="...">
+    </div>
+</div>
